syntax = "proto3";

package horus.pb;





// A vector with 2 `float` fields.
message Vector2f {

  float x = 1;
  float y = 2;
}

// A vector with 3 `float` fields.
message Vector3f {

  float x = 1;
  float y = 2;
  float z = 3;
}

// A vector with two `double` fields representing a range (where the `start`
// must be lower than or equal to the `end`).
message Range {

  double start = 1;
  double end = 2;
}

// Contains a list of `uint32` values. Used when a list of repeated `uint32`
// values should be `optional`.
message UInt32List {

  repeated uint32 values = 1;
}

// A timestamp.
//
// We do not use google.protobuf.Timestamp as it is defined in libprotobuf, but
// not libprotobuf-lite, and generating metadata for such messages would lead to
// binary conflicts.
message Timestamp {

  // Number of seconds between the represented time and the epoch
  // (1970-01-01 00:00) in UTC.
  int64 seconds = 1;
  // Non-negative fractions of a second at nanosecond resolution.
  int32 nanos = 2;
}

// A duration.
//
// We do not use google.protobuf.Duration as it is defined in libprotobuf, but
// not libprotobuf-lite, and generating metadata for such messages would lead to
// binary conflicts.
message Duration {

  int64 seconds = 1;
  int32 nanos = 2;
}

// Matrix types
// ------------
message AffineTransform3f {

  repeated float data = 1;
}
